<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/btn_4"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_4" />

    <TextView
        android:id="@+id/btn_5"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_5" />

    <TextView
        android:id="@+id/btn_6"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_6" />

    <TextView
        android:id="@+id/btn_plus"
        style="@style/button_style"
        android:text="@string/btn_plus" />
</LinearLayout>
