<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/btn_ac"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_ac" />

    <TextView
        android:id="@+id/btn_delete"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_delete" />

    <TextView
        android:id="@+id/btn_separate"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_separate" />

    <TextView
        android:id="@+id/btn_multiply"
        style="@style/button_style"
        android:text="@string/btn_multiply" />
</LinearLayout>
