<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/btn_7"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_7" />

    <TextView
        android:id="@+id/btn_8"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_8" />

    <TextView
        android:id="@+id/btn_9"
        style="@style/button_style"
        android:layout_marginRight="1dp"
        android:text="@string/btn_9" />

    <TextView
        android:id="@+id/btn_menus"
        style="@style/button_style"
        android:background="@drawable/selectors"
        android:text="@string/btn_menus" />
</LinearLayout>
