<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_1"
            style="@style/button_combine_style"
            android:layout_marginRight="1dp"
            android:text="@string/btn_1" />

        <TextView
            android:id="@+id/btn_percent"
            style="@style/button_combine_style"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/btn_percent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_2"
            style="@style/button_combine_style"
            android:layout_marginRight="1dp"
            android:text="@string/btn_2" />

        <TextView
            android:id="@+id/btn_0"
            style="@style/button_combine_style"
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:text="@string/btn_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_3"
            style="@style/button_combine_style"
            android:text="@string/btn_3" />

        <TextView
            android:id="@+id/btn_point"
            style="@style/button_combine_style"
            android:layout_marginTop="1dp"
            android:text="@string/btn_point" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_equally"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:background="@drawable/selector_equally"
        android:clickable="true"
        android:gravity="center"
        android:soundEffectsEnabled="false"
        android:text="@string/btn_equally" />
</LinearLayout>